net/dll/seal/evaluator.h

SEALDLL HRESULT SEALCALL Evaluator_Exponentiate(void* thisptr, void* encrypted, uint64_t exponent, void* relin_keys, void* destination, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_TransformToNTT1(void* thisptr, void* plain, uint64_t* parms_id, void* destination_ntt, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_TransformToNTT2(void* thisptr, void* encrypted, void* destination_ntt);
SEALDLL HRESULT SEALCALL Evaluator_TransformFromNTT(void* thisptr, void* encrypted_ntt, void* destination);
SEALDLL HRESULT SEALCALL Evaluator_ApplyGalois(void* thisptr, void* encrypted, uint64_t galois_elt, void* galois_keys, void* destination, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_RotateRows(void* thisptr, void* encrypted, int steps, void* galoisKeys, void* destination, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_RotateColumns(void* thisptr, void* encrypted, void* galois_keys, void* destination, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_RotateVector(void* thisptr, void* encrypted, int steps, void* galois_keys, void* destination, void* pool);
SEALDLL HRESULT SEALCALL Evaluator_ComplexConjugate(void* thisptr, void* encrypted, void* galois_keys, void* destination, void* pool);